# PasswordManager

./: Cargo.toml
cli/: error.rs  main.rs
cli/commands/: add.rs  get.rs  list.rs
cli/database/: Manager.sqlite3  db.rs
db/: Manager.db  db.rs
src/: main.rs
src/commands/: add.rs  remove.rs
src/database/: Manager.sqlite3  db.rs
