[package]
name = "PasswordManager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0"
sodiumoxide = "0.2.4"
rusqlite = "0.25.2"
dotenv = "0.15.0"
log = "0.4.14"
env_logger = "0.9.0"

[[bin]]
name = "password-manager-cli"
path = "cli/main.rs"