[package]
name = "PasswordManager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0"
rusqlite = "0.28.0"
argon2 = "0.5.0"
base64 = "0.13.0"
rand = "0.8.4"
[[bin]]
name = "password-manager-cli"
path = "src/main.rs"